# exomem

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  QUICKSTART.md  README.md  SETUP-FRIEND.md  SETUP-LOCAL.md  compose.cuda.yaml  compose.ml.yaml  compose.yaml  env.example  pyproject.toml  release-please-config.json
.claude-plugin/: marketplace.json
docs/: ARCHITECTURE.md  ai-assistant-guide.md  benchmarks.md  capabilities.md  comparison-basic-memory-graph.md  comparison-engraph.md  deployment.md  distribution.md  docker.md  epistemic-inbox.md  hosted-operations.md  knowledge-packs.md  product-gap-matrix.md  product-model.md  ranking-tuning.md  release.md  remote-checklist.md  remote-quickstart.md  review-studio.md  semantic-blocks.md  semantic-language.md  substrate-control-plane-contract.md  vs-built-in-memory.md  workflow-skills.md
experiments/rust_find_keyword_lite/: Cargo.toml
experiments/rust_find_keyword_lite/src/: main.rs
infra/: README.md  tool-versions.env
infra/provisioner/: Dockerfile  OWNERSHIP.md  README.md  alembic.ini  pyproject.toml
infra/provisioner/alembic/: env.py
infra/provisioner/alembic/versions/: 0001_initial.py  0002_durability.py  0003_cell_operation_lock.py  0004_export_delivery_ledger.py  0005_capacity_reservations.py
infra/provisioner/src/exomem_provisioner/: __init__.py  adapters.py  app.py  capacity.py  config.py  credentials.py  crypto.py  database.py  database_backup.py  database_bootstrap.py  deletion.py  driver.py  durability.py  durability_actions.py  durability_crypto.py  durability_driver.py  durability_jobs.py  durability_repository.py  durability_runtime.py  durability_store.py  entrypoint.py  kubernetes_restore.py  lifecycle.py  live.py  logging.py  main.py  models.py  production.py  production_durability.py  provider_deletion.py  provider_identity.py  provider_recovery.py  repository.py  restore_fetch.py  schemas.py  vault_backup.py  volume.py  worker.py  worker_ownership.py
infra/provisioner/tests/: test_api.py  test_capacity.py  test_config.py  test_database_backup.py  test_database_bootstrap.py  test_durability_actions.py  test_durability_crypto.py  test_durability_driver.py  test_durability_jobs.py  test_durability_repository.py  test_durability_runtime.py  test_durability_store.py  test_durability_workflow.py  test_export_object_service.py  test_health.py  test_kubernetes_restore_runtime.py  test_live_deletion_provider.py  test_live_provider.py  test_migrations.py  test_postgresql17.py  test_production_durability.py  test_provider_adapters.py  test_provider_lifecycle.py  test_provider_rediscovery.py  test_repository.py  test_restore_fetch.py  test_restore_workflow.py  test_startup.py  test_vault_backup.py  test_worker.py
infra/provisioner/tests/fixtures/: exomem-hosted-release-v1.json
openspec/: config.yaml
scripts/: _service-common.ps1  _service-common.sh  add-tunnel-hostname.ps1  analyze_tool_surface.py  auto_tune_ranking.py  category_recall_latency.py  check_pr_title.py  codex_auth_session_harness.py  codex_task.sh  com.exomem.plist  compare_rust_keyword_find.py  compare_rust_write_ops.py  demo-sample-vault.py  deploy.ps1  dump-tool-schemas.py  e2e_http_server.py  e2e_product_loop.py  eval_retrieval.py  exomem.service  fix_wikilink_residuals.py  gen-icon-assets.py  generate-capabilities.py  generate-public-privacy-fixtures.py  generate-token.ps1  genericize-schema.py  grant-no-uac.ps1  graph_value_benchmark.py  install-service.ps1  install-service.sh  install.ps1  install.sh  latency_curve.py  mint-upload-token.py  normalize_vault_wikilinks.py  preview_normalize_diff.py  product_flow_benchmark.py  rebuild-schema-zip.ps1  rebuild-schema-zip.py  rebuild-schema-zip.sh  restart.ps1  (+23 more)
tests/: conftest.py  test_accel.py  test_access.py  test_activation.py  test_activation_manifest.py  test_add.py  (+295 more)
(+1052 files in other folders)
