[project]
name = "kb-mcp"
version = "0.1.0"
description = "Self-hosted MCP server exposing Hugo's Obsidian Knowledge Base to mobile claude.ai"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Hugo Anderson", email = "hugoander@gmail.com" }]

dependencies = [
    "fastmcp>=2.10",
    "pyyaml>=6.0",
    "python-slugify>=8.0",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kb_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
