[package]
name = "rust_find_keyword_lite"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", default-features = false, features = [
  "derive",
  "std",
  "help",
  "usage",
  "error-context",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
codegen-units = 1
lto = "thin"
